@@ -1,10 +1,13 @@
 
-dist_noinst_DATA =		\
-		apl.loadkeys	\
-		apl.vim		\
-		apl.xkb		\
-		apl.xkm		\
-		apl.xmodmap	\
-		keyboard.txt	\
-		keyboard1.txt
+dist_noinst_DATA =			\
+		apl.loadkeys		\
+		apl.vim			\
+		apl.xkb			\
+		apl.xkm			\
+		apl.xmodmap		\
+		apl.dyalog.xmodmap	\
+		keyboard.txt		\
+		keyboard.dyalog.txt	\
+		keyboard1.txt		\
+		keyboard1.dyalog.txt
 
